# director-plan

./: App.tsx  Cargo.toml  README.md  constants.ts  metadata.json  package.json  types.ts  vite.config.ts
apps/director-plan/: App.tsx  index.html  package-lock.json  package.json  playwright.config.ts  types.ts
apps/director-plan/components/: AssetLibrary.tsx  KanbanBoard.tsx  Layout.tsx  SettingsPage.tsx
apps/director-plan/e2e/: director_flow.spec.ts
apps/director-plan/playwright-report/: index.html
apps/director-plan/scripts/: snapshot.spec.ts
apps/director-plan/services/: api.ts
apps/director-plan/test-results/: .last-run.json
components/: ImageComparator.tsx  KanbanCard.tsx  TicketDetailModal.tsx
crates/director-plan/: Cargo.toml
crates/director-plan/src/: execution_loop.rs  lib.rs  main.rs  server.rs  types.rs  worker.rs
crates/director-plan/src/context/: ast.rs  discovery.rs  mod.rs
crates/director-plan/src/verification/: mod.rs  visual_diff.rs
crates/director-plan/tests/: integration_verification.rs
e2e/: director_flow.spec.ts
plan/tickets/: T-001.toml  T-E2E-01.toml  T-E2E-VISUAL.toml  T-FAIL.toml
scripts/: verify_skia_integration.sh
services/: api.ts
verification/: verify_diff_ui.py
