[package]
name = "director-plan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml_datetime = { version = "0.7.3", features = ["serde"] }
toml_edit = { version = "0.23.9", features = ["serde"] }
walkdir = "2.5.0"
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.39.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
mime_guess = "2.0.5"
image = "0.25.9"
regex = "1.12.2"
oxc_allocator = "0.102.0"
oxc_parser = "0.102.0"
oxc_span = "0.102.0"
oxc_semantic = "0.102.0"
syn = { version = "2.0.111", features = ["full", "visit"] }
petgraph = "0.8.3"
reqwest = { version = "0.12", features = ["json"] }
oxc_ast = "0.102.0"

[dev-dependencies]
tempfile = "3.10"
